Updated (Hamburger Dark Mode Fix)

--- a/style.css
+++ b/style.css
@@ -115,12 +115,12 @@ a:hover {
     cursor: default;
 }
 
-#moonIcon {
+#moonIcon, #moonIconHam {
     cursor: default;
     height: 2.5rem;
 }
 
-#moonIcon:hover {
+#moonIcon:hover, #moonIconHam:hover {
     transform: scale(1.2);
     transition: all 250ms ease;
     cursor: pointer;
@@ -200,6 +200,16 @@ a:hover {
 }
 .hamburger-icon span:last-child {
     transform: none;
+}
+
+.theme-toggle-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    gap: 1.5rem;
+    margin-bottom: 1rem;
+    size: small;
 }
 
 /* SECTIONS */
